--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "latest",
     "connect-redis": "^3.4.0",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "jade": "^1.11.0",
     "mongoose": "^5.4.1",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
-    "redis": "^2.8.0",
-    "body-parser": "latest"
+    "passport-google-oauth": "^1.0.0",
+    "redis": "^2.8.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
