--- a/src/oauth/config.json
+++ b/src/oauth/config.json
@@ -1,5 +1,5 @@
 {
-    "google_client_id":"",
-    "google_client_secret":"",
-    "google_callback_url": ""
+    "google_client_id":"885449576776-o75qhhp5mgjcrtd5rnmghmp9iqt3ke59.apps.googleusercontent.com",
+    "google_client_secret":"Y5gGR7bfiAIm_-qSqLtaMJPC",
+    "google_callback_url": "http://127.0.0.1:5000/oauth/google/callback"
 }
