--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "jade": "^1.11.0",
     "mongoose": "^5.4.1",
     "morgan": "^1.9.1",
+    "mysql": "^2.16.0",
+    "mysql2": "^1.6.4",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "sequelize": "^4.42.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
