--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "express-graphql": "^0.7.1",
     "express-session": "^1.15.6",
     "graphql": "^14.1.1",
+    "graphql-import": "0.7.1",
     "graphql-subscriptions": "1.0.0",
-    "jade": "^1.11.0",
+    "helmet": "^3.16.0",
     "materialize-css": "^1.0.0-rc.2",
     "mongoose": "^5.4.1",
     "morgan": "^1.9.1",
@@ -28,14 +29,14 @@
     "mysql2": "^1.6.4",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
+    "pug": "2.0.3",
     "redis": "^2.8.0",
     "sequelize": "^4.42.0",
-    "subscriptions-transport-ws": "0.9.15",
-    "graphql-import": "0.7.1"
+    "subscriptions-transport-ws": "0.9.15"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
     "rimraf": "^2.6.2"
   }
 }
