--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./npm-debug.log --copy-files",
-    "start": "npm run build && node dist/src/index.js"
+    "clean": "rm -rf build && mkdir build",
+    "build-server": "babel -d ./build ./src -s --copy-files --source-maps",
+    "build": "npm run clean && npm run build-server",
+    "start": "npm run build && node ./build/index.js"
   },
   "author": "",
   "license": "ISC",
