--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "pug": "2.0.3",
     "redis": "^2.8.0",
     "response-time": "^2.3.2",
-    "sequelize": "^4.42.0",
+    "sequelize": ">=5.3.0",
     "subscriptions-transport-ws": "0.9.15"
   },
   "devDependencies": {
